Fix Family Union World level 7

--- a/.i18n/Game.pot
+++ b/.i18n/Game.pot
@@ -1,7 +1,7 @@
 msgid ""
 msgstr "Project-Id-Version: Game v4.6.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: Thu Feb 29 13:16:58 2024\n"
+"POT-Creation-Date: Thu Feb 29 15:32:18 2024\n"
 "Last-Translator: \n"
 "Language-Team: none\n"
 "Language: en\n"
@@ -2165,8 +2165,8 @@ msgid "\n"
 "`{x | x ∈ A ∧ x ∈ B}` is another way to write `A ∩ B`.\n"
 "\n"
 "As usual, we have a theorem that states the meaning of set-builder notation.  Lean will\n"
-"recognize `set_builder_def` as a proof of any statement of the form `a ∈ {x | P x} ↔ P a`.\n"
-"And that means that `rewrite [set_builder_def]` will rewrite `a ∈ {x | P x}` as `P a`.\n"
+"recognize `mem_setOf` as a proof of any statement of the form `a ∈ {x | P x} ↔ P a`.\n"
+"And that means that `rewrite [mem_setOf]` will rewrite `a ∈ {x | P x}` as `P a`.\n"
 ""
 msgstr ""
 
