Add explanation of wider of use cases'

--- a/.i18n/Game.pot
+++ b/.i18n/Game.pot
@@ -1,7 +1,7 @@
 msgid ""
 msgstr "Project-Id-Version: Game v4.6.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: Thu Feb 29 18:06:36 2024\n"
+"POT-Creation-Date: Sat Mar 16 20:08:37 2024\n"
 "Last-Translator: \n"
 "Language-Team: none\n"
 "Language: en\n"
@@ -1260,9 +1260,14 @@ msgid "\n"
 msgstr ""
 
 #: Game.Levels.Union.L03cases
-msgid "If you have an assumption `h : P ∨ Q`, then the tactic `cases' h with h1 h2` will break\n"
-"your proof into cases.  In case 1, you'll have the new assumption `h1 : P`, and in case\n"
-"2 you'll have `h2 : Q`.  In both cases you have to prove the original goal."
+msgid "If `h` is a proof of a statement of the form `P ∨ Q`, then the tactic\n"
+"`cases' h with h1 h2` will break your proof into cases.  In case 1, you'll have the new\n"
+"assumption `h1 : P`, and in case 2 you'll have `h2 : Q`.  In both cases you have to prove\n"
+"the original goal.\n"
+"\n"
+"The `cases'` tactic has other uses.  In particular, it can be applied to proofs of statements\n"
+"that do not have the form `P ∨ Q`.  However, we will not discuss these other uses of the\n"
+"`cases'` tactic in this game."
 msgstr ""
 
 #: Game.Levels.Union.L03cases
@@ -1281,7 +1286,7 @@ msgstr ""
 
 #: Game.Levels.Union.L03cases
 msgid "Now the assumption `«{h3}»` is an "or" statement.  The easiest way to use such an\n"
-"assumption is to break your proof into cases.  To do this in lean, use the tactic\n"
+"assumption is to break your proof into cases.  To do this in Lean, use the tactic\n"
 "`cases' «{h3}» with «{h3}»A «{h3}»B`."
 msgstr ""
 
@@ -1296,6 +1301,9 @@ msgstr ""
 msgid "\n"
 "Note that Lean also has a `cases` tactic, but the syntax is a little more complicated.\n"
 "That's why we have chosen to use the `cases'` tactic.\n"
+"\n"
+"The `cases'` tactic has other uses.  However, in this game we will be using it only with\n"
+"assumptions that are "or" statements, to break the proof into cases.\n"
 ""
 msgstr ""
 
