Add generated json file

--- a/.i18n/es/Game.po
+++ b/.i18n/es/Game.po
@@ -2920,7 +2920,7 @@ msgid ""
 "In this level, you'll try out these ideas."
 msgstr ""
 "En notación matemática, la intersección de la familia $F$ suele denotarse"
-" como $\bigcap F$.\n"
+" como $\\bigcap F$.\n"
 "En Lean, la intersección de una familia `F` se denota `⋂₀ F`. (Puedes"
 " ingresar el símbolo\n"
 "`⋂₀` escribiendo `\\I0`.)\n"
@@ -2932,8 +2932,7 @@ msgstr ""
 "Lean abrevia esta declaración como `∀ t ∈ F, x ∈ t`.\n"
 "El símbolo `∀` se llama el *cuantificador universal*, y puedes introducirlo"
 " en Lean escribiendo\n"
-"`\f"
-"orall`. Note que `∀ t, t ∈ F → x ∈ t` significa `∀ t, (t ∈ F → x ∈ t)`, no\n"
+"`\\forall`. Note que `∀ t, t ∈ F → x ∈ t` significa `∀ t, (t ∈ F → x ∈ t)`, no\n"
 "`(∀ t, t ∈ F) → x ∈ t`. En otras palabras, Lean interpreta el cuantificador"
 " universal como aplicándose al resto de la declaración. Si quieres que se"
 " aplique a menos, debes utilizar paréntesis para indicarlo.\n"
