--- a/.i18n/es/Game.po
+++ b/.i18n/es/Game.po
@@ -2297,40 +2297,40 @@ msgstr "Demostración por casos"
 msgid ""
 "In this proof, we'll need a new proof technique: proof by cases.  And we'll"
 " need a new\n"
-"tactic to implement that technique in Lean: `cases'`."
+"tactic to implement that technique in Lean: `rcases`."
 msgstr ""
 " En esta prueba, necesitaremos una nueva técnica de demostración: "
 "demostración por casos. Y necesitaremos una nueva táctica para implementar "
-"esa técnica en Lean: `cases'`."
+"esa técnica en Lean: `rcases`."
 
 #: Game.Levels.Union.L03cases
 msgid ""
 "If `h` is a proof of a statement of the form `P ∨ Q`, then the tactic\n"
-"`cases' h with h1 h2` will break your proof into cases.  In case 1, you'll"
+"`rcases h with h1 | h2` will break your proof into cases.  In case 1, you'll"
 " have the new\n"
 "assumption `h1 : P`, and in case 2 you'll have `h2 : Q`.  In both cases you"
 " have to prove\n"
 "the original goal.\n"
 "\n"
-"The `cases'` tactic has other uses.  In particular, it can be applied to"
+"The `rcases` tactic has other uses.  In particular, it can be applied to"
 " proofs of statements\n"
 "that do not have the form `P ∨ Q`.  However, we will not discuss these other"
 " uses of the\n"
-"`cases'` tactic in this game."
+"`rcases` tactic in this game."
 msgstr ""
 " Si `h` es una prueba de un enunciado de la forma `P ∨ Q`, entonces la"
 " táctica\n"
-"`cases' h with h1 h2` dividirá tu prueba en casos. En el caso 1, tendrás la"
+"`rcases h with h1 | h2` dividirá tu prueba en casos. En el caso 1, tendrás la"
 " nueva\n"
 "suposición `h1 : P`, y en el caso 2 tendrás `h2 : Q`. En ambos casos tienes"
 " que probar\n"
 "el objetivo original.\n"
 "\n"
-"La táctica `cases'` tiene otros usos. En particular, puede aplicarse a"
+"La táctica `rcases` tiene otros usos. En particular, puede aplicarse a"
 " pruebas de enunciados\n"
 "que no tienen la forma `P ∨ Q`. Sin embargo, no discutiremos estos otros usos"
 " de la\n"
-"táctica `cases'` en este juego."
+"táctica `rcases` en este juego."
 
 #: Game.Levels.Union.L03cases
 msgid ""
@@ -2364,12 +2364,12 @@ msgid ""
 " such an\n"
 "assumption is to break your proof into cases.  To do this in Lean, use the"
 " tactic\n"
-"`cases' «{h3}» with «{h3}»A «{h3}»B`."
+"`rcases «{h3}» with «{h3}»A | «{h3}»B`."
 msgstr ""
 "Ahora la hipótesis `«{h3}»` es una afirmación de tipo \"o\". La forma más"
 " fácil de usar tal suposición es dividir tu prueba en casos. Para hacer esto"
 " en Lean, usa la táctica\n"
-"`cases' «{h3}» with «{h3}»A «{h3}»B`."
+"`rcases «{h3}» with «{h3}»A | «{h3}»B`."
 
 #: Game.Levels.Union.L03cases
 msgid ""
@@ -2378,29 +2378,29 @@ msgid ""
 "replaced with `«{x}» ∈ A`, and for the second it has been replaced with"
 " `«{x}» ∈ B`.  In both\n"
 "cases, you must prove `«{x}» ∈ C`.  The two identifiers after `with` in the"
-" `cases'` tactic\n"
+" `rcases` tactic\n"
 "are used as the identifiers of the new assumptions in the two cases."
 msgstr ""
 " Ahora tienes *dos* objetivos. Para el primero, la hipótesis `«{x}» ∈ A ∨ "
 "«{x}» ∈ B` ha sido reemplazada con `«{x}» ∈ A`, y para el segundo ha sido "
 "reemplazada con `«{x}» ∈ B`. En ambos casos, debes probar `«{x}» ∈ C`. Los "
-"dos identificadores después de `with` en la táctica `cases'` se usan como "
+"dos identificadores después de `with` en la táctica `rcases` se usan como "
 "los identificadores de las nuevas hipótesis en los dos casos."
 
 #: Game.Levels.Union.L03cases
 msgid ""
 "Note that Lean also has a `cases` tactic, but the syntax is a little more"
 " complicated.\n"
-"That's why we have chosen to use the `cases'` tactic.\n"
+"That's why we have chosen to use the `rcases` tactic.\n"
 "\n"
-"The `cases'` tactic has other uses.  However, in this game we will be using"
+"The `rcases` tactic has other uses.  However, in this game we will be using"
 " it only with\n"
 "assumptions that are \"or\" statements, to break the proof into cases."
 msgstr ""
 " Ten en cuenta que Lean también tiene una táctica `cases`, pero la sintaxis"
 " es un poco más complicada. Por eso hemos decidido utilizar la táctica"
-" `cases'`.\n"
-"La táctica `cases'` tiene otros usos, pero en este juego solo lo utilizaremos"
+" `rcases`.\n"
+"La táctica `rcases` tiene otros usos, pero en este juego solo lo utilizaremos"
 " con\n"
 "hipótesis de tipo \"o\", para dividir la prueba en casos."
 
@@ -4541,4 +4541,3 @@ msgstr ""
 " En este juego aprenderás los conceptos básicos de prueba de teoremas en "
 "Lean al probar teoremas sobre uniones, intersecciones y complementos de "
 "conjuntos."
-
