Add Marco to credits

--- a/.i18n/en/Game.pot
+++ b/.i18n/en/Game.pot
@@ -1,7 +1,7 @@
 msgid ""
 msgstr "Project-Id-Version: Game v4.7.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: Thu Aug 21 19:35:58 2025\n"
+"POT-Creation-Date: Thu Aug 21 20:01:37 2025\n"
 "Last-Translator: \n"
 "Language-Team: none\n"
 "Language: en\n"
@@ -2464,6 +2464,7 @@ msgid "*Game version: 4.4*\n"
 "\n"
 "* **Creator:** Daniel J. Velleman; based on the Natural Numbers Game, by Kevin Buzzard\n"
 "* **Game Engine:** Alexander Bentkamp, Jon Eugster, Patrick Massot\n"
+"* **Spanish Translation:** Miguel Marco\n"
 "\n"
 "## Resources\n"
 "\n"
