Update Spanish translation

--- a/.i18n/es/Game.po
+++ b/.i18n/es/Game.po
@@ -510,6 +510,7 @@ msgid ""
 msgstr ""
 " Ten en cuenta que Lean también tiene una táctica §0, pero la sintaxis es un p"
 "oco más complicada. Por eso hemos decidido utilizar la táctica §1.\n"
+"\n"
 "La táctica §2 tiene otros usos, pero en este juego solo lo utilizaremos con\n"
 "hipótesis de tipo \"o\", para dividir la prueba en casos."
 
@@ -740,33 +741,33 @@ msgid ""
 "### If your goal is §4\n"
 "\n"
 "You may be able to use the §5 tactic to reexpress the goal as an equivalent\n"
-"positive statement.  If not, then a good strategy is to use proof by contradic"
-"tion.  The\n"
+"positive statement.  If not, then a good strategy is to use proof by contradiction.  The\n"
 "tactic §6 will introduce the assumption §7, and set the goal to be §8.\n"
 "\n"
 "### If you have an assumption §9\n"
 "\n"
-"You may be able to use the tactic §10 to reexpress this assumption as an equiv"
-"alent\n"
-"positive statement.  Lean treats §11 as meaning §12, so if you also have §13,"
-"\n"
-"then §14 will be a proof of §15.  That means that if you are doing a proof by"
-"\n"
+"You may be able to use the tactic §10 to reexpress this assumption as an equivalent\n"
+"positive statement.  Lean treats §11 as meaning §12, so if you also have §13,\n"
+"then §14 will be a proof of §15.  That means that if you are doing a proof by\n"
 "contradiction, so your goal is §16, then §17 will close the goal."
 msgstr ""
-"§0 significa \"no es cierto que §1\". Para introducir el símbolo §2,"
-"teclea §3."
-"### Si tu objetivo es §4"
-"Podrías utilizar la táctica §5 para reexpresar el objetivo como una afirmación"
-" positiva equivalente. Si eso no funciona, una buena "
-"estrategia es usar demostración por reducción al absurdo. La táctica §6 introd"
-"ucirá la hipótesis §7 y establecerá  §8 como el objetivo."
-"### Si tienes una suposición §9"
-"Podrías utilizar la táctica §10 para reexpresar esta suposición como una afirm"
-"ación positiva equivalente. Lean interpreta §11 como si"
-"fuera §12, por lo que si también tienes §13,"
-"entonces §14 será una prueba de §15. Eso significa que si estás realizando una"
-" demostración por reducción al absurdo y tu objetivo es §16,"
+"§0 significa \\\\\"no es cierto que §1\\\\\". Para introducir el símbolo §2,\n"
+"teclea §3.\n"
+"\n"
+"### Si tu objetivo es §4\n"
+"\n"
+"Podrías utilizar la táctica §5 para reexpresar el objetivo como una afirmación\n"
+"positiva equivalente. Si eso no funciona, una buena\n"
+"estrategia es usar demostración por reducción al absurdo. La táctica §6\n"
+"introducirá la hipótesis §7 y establecerá §8 como el objetivo.\n"
+"\n"
+"### Si tienes una suposición §9\n"
+"\n"
+"Podrías utilizar la táctica §10 para reexpresar esta suposición como una\n"
+"afirmación positiva equivalente. Lean interpreta §11 como si\n"
+"fuera §12, por lo que si también tienes §13,\n"
+"entonces §14 será una prueba de §15. Eso significa que si estás realizando una\n"
+"demostración por reducción al absurdo y tu objetivo es §16,\n"
 "entonces §17 cerrará el objetivo."
 
 #. §0: `mem_inter_iff`
@@ -1159,15 +1160,19 @@ msgid ""
 "\n"
 "Lean will recognize §19 as a proof of §20 and §21 as a proof of §22."
 msgstr ""
-"§0 significa \"§1 y §2\". Para introducir el símbolo §3, escribe §4."
-"### Si tu objetivo es §5"
+"§0 significa \"§1 y §2\". Para introducir el símbolo §3, escribe §4.\n"
+"\n"
+"### Si tu objetivo es §5\n"
+"\n"
 "Si tienes §6 y §7, entonces §8 es una prueba de §9,"
 "así que §10 cerrará el objetivo."
 "Si aún no tienes pruebas de §11 y §12, entonces §13 establecerá a §14 y §15"
 "como objetivos separados. En esta situación, la táctica §16 tiene el mismo efe"
 "cto que"
-"§17."
-"### Si tienes una suposición §18"
+"§17.\n"
+"\n"
+"### Si tienes una suposición §18\n"
+"\n"
 "Lean reconocerá §19 como una prueba de §20 y §21 como una prueba de §22."
 
 #. §0: `h2`
@@ -1288,6 +1293,7 @@ msgstr ""
 "presarlo como un enunciado equivalente positivo. De manera similar, si una hip"
 "ótesis §1 es un enunciado negativo, entonces §2 intentará reexpresar §3. Aquí "
 "hay algunos ejemplos de reexpresiones realizadas por la táctica §4:\n"
+"\n"
 "* §5 se convierte en §6.\n"
 "* §7 se convierte en §8.\n"
 "* §9 se convierte en §10.\n"
@@ -1934,13 +1940,17 @@ msgid ""
 "If you also have §11, then §12 is a proof of §13."
 msgstr ""
 "§0 significa \"si §1 entonces §2\". Puedes introducir el símbolo §3 tecleando "
-"§4."
-"### Si tu objetivo es §5"
+"§4.\n"
+"\n"
+"### Si tu objetivo es §5\n"
+"\n"
 "La táctica §6 introducirá la nueva hipótesis §7 en la prueba y establecerá §8 "
 "como el objetivo.\n"
 " Asegúrate de usar un identificador §9"
-"que no esté siendo utilizado para representar alguna hipótesis existente."
-"### Si tienes una hipótesis §10"
+"que no esté siendo utilizado para representar alguna hipótesis existente.\n"
+"\n"
+"### Si tienes una hipótesis §10\n"
+"\n"
 "Si también tienes §11, entonces §12 es una prueba de §13."
 
 #: Game.Levels.Inter.L01and
@@ -3038,11 +3048,13 @@ msgstr ""
 "eba.\n"
 "\n"
 "Hay dos situaciones en las que puedes usar la táctica §1:\n"
-"- Si estás demostrando una afirmación de la forma §2, entonces puedes usar\n"
+"\n"
+"* Si estás demostrando una afirmación de la forma §2, entonces puedes usar\n"
 "la táctica §3 para introducir la suposición §4 y establecer §5 como la meta. A"
 "segúrate\n"
 "de usar un identificador que no esté en uso.\n"
-"- Si estás demostrando una afirmación de la forma §6, donde §7 es una afirmaci"
+"\n"
+"* Si estás demostrando una afirmación de la forma §6, donde §7 es una afirmaci"
 "ón sobre\n"
 "§8, entonces puedes usar la táctica §9 para introducir un nuevo objeto §10 en "
 "la prueba.\n"
@@ -3659,16 +3671,20 @@ msgid ""
 "also find it helpful to use §26 in the §27 tactic."
 msgstr ""
 "§0 significa \"§1 si y solo si §2\". Puedes introducir el símbolo §3 tecleando"
-" §4."
-"### Si tu objetivo es §5"
+" §4.\n"
+"\n"
+"### Si tu objetivo es §5\n"
+"\n"
 "Si §6 y §7 son equivalentes por definición, entonces §8 cerrará el objetivo."
 "Si tienes §9 y §10, entonces §11 es una prueba de §12,"
 "así que §13 cerrará el objetivo."
 "Si aún no tienes pruebas de §14 y §15, entonces §16 establecerá a §17"
 "y §18 como tus objetivos. En esta situación, la táctica §19 tiene el mismo efe"
 "cto que"
-"§20."
-"### Si tienes una hipótesis §21"
+"§20.\n"
+"\n"
+"### Si tienes una hipótesis §21\n"
+"\n"
 "Lean reconocerá §22 como una prueba de §23 y §24 como una prueba de §25. Tambi"
 "én"
 "puede serte útil utilizar §26 en la táctica §27."
@@ -4589,8 +4605,10 @@ msgid ""
 "§26, and in case 2 it is replaced by §27.  In both cases, you must prove\n"
 "the goal."
 msgstr ""
-"§0 significa \"§1 o §2 o ambos\". Para introducir el símbolo §3, teclea §4."
-"### Si tu objetivo es §5"
+"§0 significa \"§1 o §2 o ambos\". Para introducir el símbolo §3, teclea §4.\n"
+"\n"
+"### Si tu objetivo es §5\n"
+"\n"
 "Si tienes §6, entonces §7 es una prueba de §8, así que §9"
 "cerrará el objetivo. De manera similar, si tienes §10, entonces §11 es una pru"
 "eba"
@@ -4600,8 +4618,10 @@ msgstr ""
 "usar §17 para establecer el objetivo como §18. Opcionalmente, la táctica §19 t"
 "endrá el mismo efecto que §20, y §21 tendrá el mismo "
 "efecto que"
-"§22."
-"### Si tienes una hipótesis §23"
+"§22.\n"
+"\n"
+"### Si tienes una hipótesis §23\n"
+"\n"
 "Una buena estrategia sería usar demostración por casos. La táctica §24"
 "dividirá la prueba en dos casos. En caso 1, la suposición §25 será reemplazada"
 " por"
@@ -4673,17 +4693,37 @@ msgid ""
 "* For issues about the game's content, please open an\n"
 "[issue at the STG repo](https://github.com/djvelleman/STG4/issues)."
 msgstr ""
-"*Versión del juego: 4.4*## Almacenamiento de progreso El juego almacena tu "
-"progreso en el almacenamiento local de tu navegador.Si lo eliminas, perderás"
-" tu progreso!Atención: En la mayoría de los navegadores, eliminar las "
+"*Versión del juego: 4.4*\n"
+"\n"
+"## Almacenamiento de progreso\n"
+"\n"
+"El juego almacena tu "
+"progreso en el almacenamiento local de tu navegador. Si lo eliminas, perderás"
+" tu progreso!\n"
+"\n"
+"Atención: En la mayoría de los navegadores, eliminar las "
 "cookies también limpiará el almacenamiento local (o \"datos del sitio "
-"local\"). Asegúrese de descargar su progreso en el juego primero!## "
-"Créditos* **Creador:** Daniel J. Velleman; basado en el Juego de números "
-"naturales, por Kevin Buzzard* **Motor del juego:** Alexander Bentkamp, Jon "
-"Eugster, Patrick Massot "
-"**Traducción al español:** Miguel Marco"
-"## Recursos* El [Lean Zulip "
-"chat](https://leanprover.zulipchat.com/) foro## Problemas?Por favor, "
+"local\"). Asegúrese de descargar su progreso en el juego primero!\n"
+"\n"
+"## "
+"Créditos\n"
+"\n"
+"* **Creador:** Daniel J. Velleman; basado en el Juego de números "
+"naturales, por Kevin Buzzard\n"
+"\n"
+"* **Motor del juego:** Alexander Bentkamp, Jon "
+"Eugster, Patrick Massot \n"
+"\n"
+"* **Traducción al español:** Miguel Marco\n"
+"\n"
+"## Recursos\n"
+"\n"
+"* El [Lean Zulip "
+"chat](https://leanprover.zulipchat.com/) foro\n"
+"\n"
+"## Problemas?\n"
+"\n"
+"Por favor, "
 "pregunte cualquier duda sobre este juego en el[Lean Zulip "
 "chat](https://leanprover.zulipchat.com/) foro, por ejemplo en el flujo "
 "\"Miembros nuevos\". La comunidad estará encantada de ayudar. Note que el "
@@ -4691,10 +4731,15 @@ msgstr ""
 "nombre completo y real allí, céntrese en el tema y sea amable. Si está "
 "buscando un lugar menos formal (por ejemplo, desea publicar memes del juego "
 "de la teoría de conjuntos)entonces diríjase al [Lean "
-"Discord](https://discord.gg/WZ9bs9UCvx).Alternativamente, si experimenta "
-"problemas / errores puede abrir issues en github:* Para problemas con el "
+"Discord](https://discord.gg/WZ9bs9UCvx).\n"
+"\n"
+"Alternativamente, si experimenta "
+"problemas / errores puede abrir issues en github:\n"
+"\n"
+"* Para problemas con el "
 "motor del juego, por favor abra un[issue en el repo de "
-"lean4game](https://github.com/leanprover-community/lean4game/issues).* Para "
+"lean4game](https://github.com/leanprover-community/lean4game/issues).\n"
+"* Para "
 "problemas sobre el contenido del juego, por favor abra un[issue en el repo "
 "STG](https://github.com/djvelleman/STG4/issues)."
 
@@ -5007,6 +5052,7 @@ msgstr ""
 "a la lista de suposiciones.\n"
 "\n"
 "Hay dos posibles formas de usar la táctica §6:\n"
+"\n"
 "* A veces quieres afirmar una declaración §7, pero la prueba de §8 es demasiad"
 "o\n"
 "difícil para ser dada en una sola línea. En esa situación, simplemente puedes "
@@ -5015,6 +5061,7 @@ msgstr ""
 "la prueba de §11 se convierte en tu objetivo inmediato.\n"
 "Una vez que se haya cerrado el objetivo de demostrar §12, podrás volver a\n"
 "tu objetivo original, con §13 añadido a la lista de suposiciones.\n"
+"\n"
 "* Si escribes §14, entonces Lean intentará deducir qué afirmación §15 es proba"
 "da por §16, y\n"
 "si puede hacerlo, directamente añadirá una nueva hipótesis §17.\n"
