--- a/.i18n/es/Game.po
+++ b/.i18n/es/Game.po
@@ -735,7 +735,7 @@ msgstr ""
 #. §17: `exact h hP`
 #: Game.Levels.Comp.L01contra
 msgid ""
-"§0 means \\\\\"it is not the case that §1\\\\\".  To enter the symbol §2,\n"
+"§0 means \"it is not the case that §1\".  To enter the symbol §2,\n"
 "type §3.\n"
 "\n"
 "### If your goal is §4\n"
@@ -751,7 +751,7 @@ msgid ""
 "then §14 will be a proof of §15.  That means that if you are doing a proof by\n"
 "contradiction, so your goal is §16, then §17 will close the goal."
 msgstr ""
-"§0 significa \\\\\"no es cierto que §1\\\\\". Para introducir el símbolo §2,\n"
+"§0 significa \"no es cierto que §1\". Para introducir el símbolo §2,\n"
 "teclea §3.\n"
 "\n"
 "### Si tu objetivo es §4\n"
